--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,8 +16,8 @@ stages:
   - test
   - doc
   - packaging
-  - publish
-  - publish_manifest
+  - build_release
+  - publish_release
   - test_coverage
   - publish_coverage
 
@@ -161,6 +161,16 @@ test-script-gen-genesis:
   script:
     - dune build gen_genesis.exe
   interruptible: true
+
+test-static-libs-patch:
+  image: ${build_deps_image_name}:runtime-build-test-dependencies--${build_deps_image_version}
+  stage: test
+  except:
+    - master
+    - tags@tezos/tezos
+    - /-release$/@tezos/tezos
+  script:
+    - git apply packaging/build/static_libs.patch
 
 .test_template: &test_definition
   <<: *build_definition
@@ -1570,20 +1580,18 @@ opam:uecc:
 
 ##END_OPAM##
 
-
-
 ############################################################
 ## Stage: publish                                         ##
 ############################################################
 
-.publish_template: &publish_definition
+.build_docker_release_template: &build_docker_release_definition
   image: docker:latest
   services:
     - docker:dind
   variables:
     DOCKER_DRIVER: overlay2
     IMAGE_ARCH_PREFIX: ""
-  stage: publish
+  stage: build_release
   only:
     - master@tezos/tezos
     - tags@tezos/tezos
@@ -1603,21 +1611,107 @@ opam:uecc:
     - docker push "${public_docker_image_name}-debug:${IMAGE_ARCH_PREFIX}${CI_COMMIT_REF_NAME}"
   interruptible: false
 
-publish:docker_amd64:
-  <<: *publish_definition
+build_docker_amd64:
+  <<: *build_docker_release_definition
   variables:
     DOCKER_DRIVER: overlay2
     IMAGE_ARCH_PREFIX: "amd64-"
   tags:
     - safe_docker
 
-publish:docker_arm64:
-  <<: *publish_definition
+build_docker_arm64:
+  <<: *build_docker_release_definition
   variables:
     DOCKER_DRIVER: overlay2
     IMAGE_ARCH_PREFIX: "arm64-"
   tags:
     - arm64
+
+.build_static_binaries_template: &build_static_binaries_definition
+  stage: build_release
+  image: ${build_deps_image_name}:runtime-build-dependencies--${build_deps_image_version}
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "master"'
+      when: on_success
+    - if: '$CI_COMMIT_BRANCH =~ /-release$/'
+      when: on_success
+    - if: '$CI_COMMIT_TAG != null'
+      when: on_success
+  before_script:
+    - sudo apk --no-cache --virtual add unzip wget eudev-dev autoconf automake libtool linux-headers binutils
+    # TODO: include static version of this libraries to the default docker image
+    - packaging/build/build-libusb-and-hidapi.sh
+    # TODO: patch approach is very fragile, we should think about something
+    # more reliable
+    - git apply packaging/build/static_libs.patch
+    - dune build @install --profile release
+    - dune install --prefix install_root
+    # Strip debug symbols in binaries
+    - find . -maxdepth 1 -type f ! -name "*.*" -exec strip --strip-debug {} \;
+  artifacts:
+    paths:
+      - install_root/bin/*
+
+build_static-x86_64-linux-binaries:
+  <<: *build_static_binaries_definition
+  script:
+    - sudo apk --no-cache --virtual add upx
+    # Compress resulting binaries
+    - find . -maxdepth 1 -type f ! -name "*.*" -exec upx {} \;
+
+build_static-arm64-linux-binaries:
+  <<: *build_static_binaries_definition
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "master" && $CI_PROJECT_NAMESPACE == "tezos"'
+      when: on_success
+    - if: '$CI_COMMIT_BRANCH =~ /-release$/ && $CI_PROJECT_NAMESPACE == "tezos"'
+      when: on_success
+    - if: '$CI_COMMIT_TAG != null && $CI_PROJECT_NAMESPACE == "tezos"'
+      when: on_success
+  script:
+    - echo "No compression for now"
+  tags:
+    - arm64
+
+.release_static_binaries_template: &release_static_binaries_definition
+  image: registry.gitlab.com/gitlab-org/release-cli
+  variables:
+    ARCH_PREFIX: ""
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /\A\d+\.\d+\.\d+\z/ && $CI_PROJECT_NAMESPACE == "tezos"'
+      when: on_success
+  stage: publish_release
+  script:
+    - apk --no-cache --virtual add bash jq curl
+    - scripts/release/upload-static-binaries-to-package-registry.sh "$ARCH_PREFIX"
+
+release-static-x86_64-binaries:
+  <<: *release_static_binaries_definition
+  variables:
+    ARCH_PREFIX: "x86_64-"
+    PACKAGE_REGISTRY_URL: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/tezos/${CI_COMMIT_TAG}"
+  dependencies:
+    - build_static-x86_64-linux-binaries
+
+release-static-arm64-binaries:
+  <<: *release_static_binaries_definition
+  variables:
+    ARCH_PREFIX: "arm64-"
+    PACKAGE_REGISTRY_URL: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/tezos/${CI_COMMIT_TAG}"
+  dependencies:
+    - build_static-arm64-linux-binaries
+
+release-on-gitlab:
+  image: registry.gitlab.com/gitlab-org/release-cli
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /\A\d+\.\d+\.\d+\z/ && $CI_PROJECT_NAMESPACE == "tezos"'
+      when: on_success
+  variables:
+    PACKAGE_REGISTRY_URL: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/tezos/${CI_COMMIT_TAG}"
+  stage: publish_release
+  script:
+    - apk --no-cache --virtual add bash jq
+    - scripts/release/create-release-with-static-binaries.sh
 
 merge-manifest:
   image: docker:latest
@@ -1626,7 +1720,7 @@ merge-manifest:
       command: ["--experimental"]
   variables:
     DOCKER_DRIVER: overlay2
-  stage: publish_manifest
+  stage: publish_release
   only:
     - master@tezos/tezos
     - tags@tezos/tezos
