--- a/src/lib_stdlib/test/dune
+++ b/src/lib_stdlib/test/dune
@@ -1,13 +1,16 @@
 (executables
  (names test_tzList
         test_tzString
-        test_lwt_pipe)
+        test_lwt_pipe
+        test_circular_buffer
+        test_circular_buffer_fuzzy)
  (libraries tezos-stdlib
             alcotest
             alcotest-lwt
             lwt_log
             bigstring
-            lwt.unix)
+            lwt.unix
+            crowbar)
  (flags (:standard -open Tezos_stdlib)))
 
 (rule
@@ -30,11 +33,21 @@
  (action (run %{exe:test_lwt_pipe.exe})))
 
 (rule
+ (alias runtest_circular_buffer)
+ (action (run %{exe:test_circular_buffer.exe})))
+
+(rule
+ (alias runtest_circular_buffer_fuzzy)
+ (action (run %{exe:test_circular_buffer_fuzzy.exe})))
+
+(rule
  (alias runtest)
  (package tezos-stdlib)
  (deps (alias runtest_tzList)
        (alias runtest_tzString)
-       (alias runtest_lwt_pipe))
+       (alias runtest_lwt_pipe)
+       (alias runtest_circular_buffer)
+       (alias runtest_circular_buffer_fuzzy))
  (action (progn)))
 
 (rule
